# http-directory

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MAINTAINER-NOTES  Makefile  README.md  http-directory.cabal  make-dist  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
example/: Makefile  latest-ghc.hs  list-page.hs
src/: HttpDirectory.hs
src/Network/HTTP/: Directory.hs
test/: Spec.hs
