cabal-version:       2.0
name:                http-directory
version:             0.0.0
synopsis:            http directory listing library
description:         http directory listing library
homepage:            https://github.com/juhp/http-directory
bug-reports:         https://github.com/juhp/http-directory/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/juhp/http-directory.git

library
  hs-source-dirs:      src
  exposed-modules:     HttpDirectory
                       

  build-depends:       base >= 4.9.1.0 && < 4.13
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
